--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1117,9 +1117,9 @@ input {
 
 .card {
 
-   &:not(.no-shadow) {
+   /*&:not(.no-shadow) {
       box-shadow: 0px 1px 2px 1px #999;
-   }
+   }*/
 
    .field {
       display: table-row;
