--- a/css/Cards.css
+++ b/css/Cards.css
@@ -19,6 +19,7 @@ p{
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
     padding: 14px 60px 18px 36px;
     cursor: pointer;
+    margin-bottom: 15px;
 
 
 }
